<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start_auction"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_start_auction" />
        <item
            android:id="@+id/nav_my_items"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_my_items" />
        <item
            android:id="@+id/nav_my_bids"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_my_bids" />

        <item
            android:id="@+id/nav_all_items"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_all_items" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/title_logout" />
    </group>
</menu>
